<resources>
    <string name="app_name">DemoProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_demo">Button Demo</string>
    <string name="click_me">Click me</string>
    <string name="outlines">Outlines</string>
    <string name="button_color_demo">Button Color Demo</string>
    <string name="demo">Demo</string>
    <string name="button_with_icon_and_elevation">Button with Icon and elevation</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="click_to_view_toast">Click to View toast</string>
    <string name="toast_with_margin">Toast with Margin</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="custom_toast_text">Custom toast</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="which_one_you_have_watched">Which one you have Watched?</string>
    <string name="elite">Elite</string>
    <string name="lucifer">Lucifer</string>
    <string name="what_happened_to_monday">What Happened to Monday</string>
    <string name="click_to_see">Click to See</string>
    <string name="select_you_gender">Select you gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_any_one">Select any One?</string>
    <string name="windows">Windows</string>
    <string name="macos">MacOS</string>
    <string name="linux">Linux</string>
    <string name="show_text">Show Text</string>
    <string name="this_is_simple_textview">This is simple textview</string>
    <string name="test_button">Test Button</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="click_here">Click here</string>
    <string name="simple_snackbar">Simple SnackBar</string>
    <string name="snackbar_with_action">SnackBar with action</string>
    <string name="anchor_view_snackbar">Anchor view SnackBar</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="name">Name :</string>
    <string name="farzi">Farzi</string>
    <string name="rating">Rating :</string>
    <string name="_8_2">8.2</string>
    <string name="cast">Cast :</string>
    <string name="shahid_kapoor_sunny_vijay_sethupathi_michael_vednayagam_raashii_khanna_megha_vyas_kay_kay_menon_mansoor_dalal">Shahid Kapoor ... Sunny · Vijay Sethupathi ... Michael Vednayagam · Raashii Khanna ... Megha Vyas · Kay Kay Menon ... Mansoor Dalal ·</string>
    <string name="editor">Editor :</string>
    <string name="sumeet_kotian">Sumeet Kotian</string>
    <string name="description">Description :</string>
    <string name="an_artist_who_gets_pulled_into_the_murky_high_stakes_of_a_con_job_and_a_fiery_task_force_officer_on_the_mission_to_rid_the_country_of_his_menaces_in_a_fast_paced_edgy_one_of_a_kind_thriller">An artist who gets pulled into the murky high stakes of a con job and a fiery task force officer on the mission to rid the country of his menaces in a fast-paced, edgy one-of-a-kind thriller.</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="watch">Watch</string>
    <string name="laptop">Laptop</string>
    <string name="_4_24">4:24</string>
    <string name="empty_text"> "" </string>
    <string name="type">Type</string>
    <string name="take_my_breath">Take My Breath</string>
    <string name="change_song">Change Song</string>
    <string name="size">Size</string>
    <string name="colors">Colors</string>
    <string name="read_more">Read More</string>
    <string name="specification">Specification</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="price_item">Price item :</string>
    <string name="shipping">Shipping :</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal :</string>
    <string name="todo">TODO</string>
    <string-array name="language">
        <item> English </item>
        <item> Hindi </item>
        <item> Gujarati </item>
    </string-array>
    <string-array name="songLessThenZero">
        <item> Less Then Zero </item>
        <item> 3:32 </item>
        <item> "Remember I was your hero, yeah\n" +
                        "I'd wear your heart like a symbol\n" +
                        "I couldn't save you from my darkest truth of all\n" +
                        "I know\n" +
                        "I'll always be less than zero\n" +
                        "Oh yeah\n" +
                        "You tried your best with me, I know\n" +
                        "I couldn't face you with my darkest truth of all\n" +
                        "Oh\n" +
                        "'Cause I can't get it out of my head\n" +
                        "And no, I can't shake this feeling that crawls in my bed\n" +
                        "I try to hide it, but I know you know me\n" +
                        "I try to fight it, but I'd rather be free\n" +
                        "Oh, oh\n" +
                        "Oh yeah\n" +
                        "Can we meet in the middle?\n" +
                        "Oh yeah\n" +
                        "'Cause you were just like me before\n" +
                        "Now you'd rather leave me\n" +
                        "Than to watch me die in your arms\n" +
                        "Oh, whoa\n" +
                        "But I can't get it out of my head\n" +
                        "No, I can't shake this feeling that crawls in my bed\n" +
                        "I try to hide it, but I know you know me\n" +
                        "I try to fight it, but I'd rather be free\n" +
                        "Oh, whoa (hey)\n" +
                        "ooh\n" +
                        "(I try to) ooh\n" +
                        "(I try to)\n" +
                        "I can't get it out of my head\n" +
                        "No, I can't shake this feeling that crawls in my bed\n" +
                        "I try to hide it, but I know you know me (know me)\n" +
                        "I try to fight it, but I'd rather be free (be free)\n" +
                        "Yeah\n" +
                        "I'll always be less than zero\n" +
                        "You tried your best with me, I know" </item>


    </string-array>
    <string-array name="songTakeMyBreath">
        <item> Take My Breath </item>
        <item> 5:32 </item>
        <item> "I saw the fire in your eyes\n" +
                        "I saw the fire when I look into your eyes\n" +
                        "You tell me things you wanna try, uh\n" +
                        "I know temptation is the devil in disguise\n" +
                        "You risk it all to feel alive, oh yeah\n" +
                        "You're offering yourself to me like sacrifice\n" +
                        "You said you do this all the time\n" +
                        "Tell me you love me if I bring you to the light\n" +
                        "It's like a dream what she feels with me\n" +
                        "She loves to be on the edge\n" +
                        "Her fantasy is okay with me\n" +
                        "Then suddenly, baby says\n" +
                        "Take my breath away\n" +
                        "And make it last forever, babe\n" +
                        "Do it now or never, babe, uh\n" +
                        "Take my breath away\n" +
                        "Nobody does it better, babe\n" +
                        "Bring me close to\n" +
                        "Want me to hold onto you tight\n" +
                        "You pull me closer, I feel the heat between your thighs (uh, say)\n" +
                        "You're way too young to end your life (huh)\n" +
                        "Girl, I don't wanna be the one who pays the price\n" +
                        "Ooh, it's like a dream what she feels with me\n" +
                        "She loves to be on the edge\n" +
                        "Her fantasy is okay with me\n" +
                        "Then suddenly, baby says\n" +
                        "Take my breath away\n" +
                        "And make it last forever, babe\n" +
                        "Do it now or never, babe, uh\n" +
                        "Take my breath away\n" +
                        "Nobody does it better, babe\n" +
                        "Bring me close to heaven, babe, uh\n" +
                        "Take my breath\n" +
                        "Oh, oh-ooh\n" +
                        "And they'll see me (yeah)\n" +
                        "Oh-ooh, ooh (yeah)\n" +
                        "Oh-oh, oh-oh\n" +
                        "Oh-oh, oh-oh\n" +
                        "Oh-oh, oh-oh\n" +
                        "Oh-oh\n" +
                        "Take my breath away (take my breath, my breath away)\n" +
                        "And make it last forever, babe\n" +
                        "Do it now or never, babe, uh\n" +
                        "Take my breath away (take my breath, my breath away)\n" +
                        "Nobody does it better, babe\n" +
                        "Bring me close to heaven, babe (oh)\n" +
                        "Take my breath (take my breath, my breath away)\n" +
                        "(Nobody)\n" +
                        "Take my breath (take my breath, my breath away)\n" +
                        "Nobody does it better, babe (better)\n" +
                        "Bring me close to heaven, babe, uh\n" +
                        "Take my breath"
        </item>

    </string-array>
    <string name="call">Call</string>
    <string name="video">video</string>
    <string name="setting">setting</string>
    <string name="this_is_secondfragment">This is SecondFragment</string>
    <string name="go_to_third">Go to Third</string>
    <string name="this_is_third_fragment">This is Third Fragment</string>
    <string name="go_to_first">Go to First</string>
    <string name="data_from_previous">Data from previous</string>
    <string name="name_">Name</string>
</resources>