<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".CheckBoxDemo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_one_you_have_watched" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:rippleColor="@color/green"
        android:id="@+id/cbElite"
        android:text="@string/elite" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbLucifer"
        android:textColor="@color/purple_700"
        android:text="@string/lucifer" />

    <CheckBox
        android:checked="true"
        android:id="@+id/cbWhatHappenedToMonday"
        android:buttonTint="@color/red"
        android:layout_width="wrap_content"
        android:textColor="@color/green"
        android:background="@color/black"
        app:rippleColor="@color/green"
        android:layout_height="wrap_content"
        android:text="@string/what_happened_to_monday"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnShowDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_see" />



</LinearLayout>