<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/call"
        android:iconTint="@color/white"
        android:icon="@drawable/baseline_local_phone_24"
        tools:ignore="UnusedAttribute"
        android:title="@string/call"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/videoCall"
        android:iconTint="@color/white"
        android:icon="@drawable/baseline_videocam_24"
        tools:ignore="UnusedAttribute"
        android:title="@string/video"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/setting"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute"
        android:title="@string/setting"
        app:showAsAction="never"/>

</menu>