<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ToastDemo">

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/click_to_view_toast"
        android:id="@+id/btnViewTaost"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/toast_with_margin"
        android:id="@+id/btnViewToastMargin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_toast_text"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnCustomToast" />

</LinearLayout>