<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".layouts.RelativeLayout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/farzi"
        android:scaleType="fitXY"
        android:id="@+id/thumbnailImage"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/thumbnail_image" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumbnailImage"
        app:cardBackgroundColor="#f1f1f1"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/rlMail" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlname"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/lblName"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farzi"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/lblName"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/rlRating"
                android:layout_marginStart="20dp"
                android:layout_below="@id/rlname"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:id="@+id/lblRating"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_2"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/lblRating"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlCast"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_below="@id/rlRating"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/lblCast"
                    android:textStyle="bold"
                    android:text="@string/cast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shahid_kapoor_sunny_vijay_sethupathi_michael_vednayagam_raashii_khanna_megha_vyas_kay_kay_menon_mansoor_dalal"
                    android:id="@+id/castName"
                    android:layout_below="@id/lblCast"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlCast"
                android:id="@+id/rlEditor"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor"
                    android:id="@+id/lblEditor"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sumeet_kotian"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/lblEditor"
                    android:layout_marginStart="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlDescription"
                android:layout_below="@id/rlEditor"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblDescription"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/description"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:textColor="@color/black"
                    android:layout_marginEnd="10dp"
                    android:text="@string/an_artist_who_gets_pulled_into_the_murky_high_stakes_of_a_con_job_and_a_fiery_task_force_officer_on_the_mission_to_rid_the_country_of_his_menaces_in_a_fast_paced_edgy_one_of_a_kind_thriller"
                    android:layout_below="@id/lblDescription"
                    />



            </RelativeLayout>


        </RelativeLayout>





    </androidx.cardview.widget.CardView>








</RelativeLayout>