<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context=".ToggleButtonDemo">

    <ToggleButton
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        />

    <ToggleButton
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/yes"
        android:textOff="@string/no" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/toggleButtonColor"
        android:layout_height="wrap_content"
        android:background="@drawable/my_toggle_color" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swDemo"
        app:switchPadding="10dp"
        app:thumbTint="@color/red"
        app:trackTint="@color/green"
        android:text="@string/show_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/textShowHide"
        android:text="@string/this_is_simple_textview"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_button" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        app:rippleColor="@color/red"
        android:src="@drawable/baseline_add_24"
        app:tint="@color/purple_700" />

    <ImageButton
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="10dp"
        app:tint="@color/green"
        android:src="@drawable/button_state_images"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:src="@drawable/baseline_add_24" />
</LinearLayout>